@@ -6,7 +6,12 @@ import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.*;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.GuildMessageChannel;
+import net.dv8tion.jda.api.entities.emoji.Emoji;
+import net.dv8tion.jda.api.interactions.components.buttons.ButtonStyle;
 import org.springframework.stereotype.Component;
+import yt.graven.gravensupport.commands.ping.PingComputer;
+import yt.graven.gravensupport.utils.messages.builder.MessageFactory;
+import yt.graven.gravensupport.utils.messages.builder.data.TicketMessage;
 
 @Component
 public class Embeds {
@@ -15,44 +20,64 @@ public class Embeds {
         return new EmbedBuilder().setColor(Color.RED).addField("Erreur :", "> " + message, false);
     }
 
-    public TMessage errorMessage(String message) {
-        return TMessage.from(error(message));
+    public TicketMessage errorMessage(String message) {
+        return MessageFactory.create().addEmbeds(error(message));
     }
 
     public EmbedBuilder success(String message) {
         return new EmbedBuilder().setColor(Color.GREEN).setTitle("Succès").setDescription(message);
     }
 
-    public TMessage successMessage(String message) {
-        return TMessage.from(success(message)).actionRow().build();
+    public TicketMessage successMessage(String message) {
+        return MessageFactory.create().addEmbeds(success(message));
     }
 
     public EmbedBuilder ticketAlreadyExists(boolean personal) {
-        return error(personal ? "Vous avez déjà un ticket ouvert." : "Un ticket est déjà ouvert avec cet utilisateur.");
+        return error(
+                personal
+                        ? "Vous avez déjà un ticket ouvert avec la modération."
+                        : "Un ticket est déjà ouvert avec cet utilisateur.");
     }
 
-    public TMessage ticketAlreadyExistsMessage(boolean personal) {
-        return TMessage.from(ticketAlreadyExists(personal)).actionRow().build();
+    public TicketMessage ticketAlreadyExistsMessage(GuildMessageChannel ticketChannel, boolean personal) {
+        // spotless:off
+        return MessageFactory.create()
+                .addEmbeds(ticketAlreadyExists(personal))
+                .addActionRow(actionRow -> actionRow
+                        .addButton(button -> button
+                                .setText("Aller au ticket")
+                                .setLink(ticketChannel.getJumpUrl())
+                        )
+                );
+        // spotless:on
     }
 
-    public TMessage ticketAlreadyExistsMessage(GuildMessageChannel ticketChannel, boolean personal) {
-        return TMessage.from(ticketAlreadyExists(personal))
-                .actionRow()
-                .button()
-                .withText("Aller au ticket")
-                .withLink(String.format(
-                        "https://discord.com/channels/%s/%s",
-                        ticketChannel.getGuild().getId(), ticketChannel.getId()))
-                .build()
-                .build();
+    public TicketMessage ping(PingComputer manager) {
+        EmbedBuilder embed = new EmbedBuilder()
+                .setTitle(":ping_pong: Pong !")
+                .setColor(Color.green)
+                .addField("↔️ Ping du Gateway :", "\n**`%s`** ms".formatted(manager.getGatewayPing()), false)
+                .addField("➡️ Ping de l'API :", "\n**`%s`** ms".formatted(manager.getRestPing()), false);
+
+        // spotless:off
+        return MessageFactory.create()
+                .addEmbeds(embed)
+                .addActionRow(actionRow -> actionRow
+                        .addButton("refresh-ping", button -> button
+                                .setStyle(ButtonStyle.PRIMARY)
+                                .setText("Actualiser")
+                                .setEmoji(Emoji.fromUnicode("🔁"))
+                        )
+                );
+        // spotless:on
     }
 
     public EmbedBuilder noTicketAttached() {
         return error("Impossible de trouver un ticket rattaché à ce salon");
     }
 
-    public TMessage noTicketAttachedMessage() {
-        return TMessage.from(noTicketAttached()).actionRow().build();
+    public TicketMessage noTicketAttachedMessage() {
+        return MessageFactory.create().addEmbeds(noTicketAttached());
     }
 
     public EmbedBuilder proposeOpening(String sentEmote) {
@@ -61,35 +86,35 @@ public class Embeds {
                 .setTitle("Ticket en cours d'ouverture !")
                 .setDescription(
                         """
-                Votre demande d'ouverture de ticket a bien été prise en compte.
-                Veuillez cependant confirmer que vous avez pris connaissance des règles de ceux-cis.
-                """)
+                                Votre demande d'ouverture de ticket a bien été prise en compte.
+                                Veuillez cependant confirmer que vous avez pris connaissance des règles de ceux-cis.
+                                """)
                 .addField(
                         "✉️ Règles des tickets :",
                         """
-                - Les messages que vous envoyez ne peuvent ni être édités, ni être supprimés.
-                - Tous les messages envoyés sont enregistrés.
-                - Les règles du discord `Graven - Développement` sont également applicables dans les tickets.
-                - Les tickets ouverts sans justification seront sanctionnés.
-                - Les tickets sont destinés à la modération. Les demandes d'aides sont susceptibles d'être sanctionnées.
-                """,
+                                - Les messages que vous envoyez ne peuvent ni être édités, ni être supprimés.
+                                - Tous les messages envoyés sont enregistrés.
+                                - Les règles du discord `Graven - Développement` sont également applicables dans les tickets.
+                                - Les tickets ouverts sans justification seront sanctionnés.
+                                - Les tickets sont destinés à la modération. Les demandes d'aides sont susceptibles d'être sanctionnées.
+                                """,
                         false)
                 .addField(
                         "❔ Utilisation :",
                         String.format(
                                 """
-                - Pour transmettre un message, vous avez juste à envoyer un message en privé avec ce bot.
-                - Les réponses de la modération se feront par le biais de ces message privés.
-                - Si votre message est transmis, la réaction %s sera ajoutée à vos messages
-                """,
+                                        - Pour transmettre un message, vous avez juste à envoyer un message en privé avec ce bot.
+                                        - Les réponses de la modération se feront par le biais de ces message privés.
+                                        - Si votre message est transmis, la réaction %s sera ajoutée à vos messages
+                                        """,
                                 sentEmote),
                         false)
                 .addField(
                         "✨ Terminer l'ouverture du ticket",
                         """
-                Afin de terminer l'ouverture du ticket, merci de sélectionner ci-dessous la raison de l'ouverture de votre ticket.
-                Vous serez ensuite recontacté dans les plus brefs délais.
-                """,
+                                Afin de terminer l'ouverture du ticket, merci de sélectionner ci-dessous la raison de l'ouverture de votre ticket.
+                                Vous serez ensuite recontacté dans les plus brefs délais.
+                                """,
                         false)
                 .setColor(Color.GREEN);
     }
@@ -100,33 +125,33 @@ public class Embeds {
                 .setTitle("Ticket ouvert !")
                 .setDescription(
                         """
-                La modération a ouvert un ticket vous impliquant.
-                Vous pouvez désormais discuter avec le staff en message privé avec le bot
-                """)
+                                La modération a ouvert un ticket vous impliquant.
+                                Vous pouvez désormais discuter avec le staff en message privé avec le bot
+                                """)
                 .addField(
                         "✉️ Règles des tickets :",
                         """
-                - Les messages que vous envoyez ne peuvent ni être édités, ni être supprimés.
-                - Tous les messages envoyés sont enregistrés.
-                - Les règles du discord `Graven - Développement` sont également applicables dans les tickets.
-                """,
+                                - Les messages que vous envoyez ne peuvent ni être édités, ni être supprimés.
+                                - Tous les messages envoyés sont enregistrés.
+                                - Les règles du discord `Graven - Développement` sont également applicables dans les tickets.
+                                """,
                         false)
                 .addField(
                         "❔ Utilisation :",
                         String.format(
                                 """
-                - Pour transmettre un message, vous avez juste à envoyer un message en privé avec ce bot.
-                - Les réponses de la modération se feront par le biais de ces message privés.
-                - Si votre message est transmis, la réaction %s sera ajoutée à vos messages
-                """,
+                                        - Pour transmettre un message, vous avez juste à envoyer un message en privé avec ce bot.
+                                        - Les réponses de la modération se feront par le biais de ces message privés.
+                                        - Si votre message est transmis, la réaction %s sera ajoutée à vos messages
+                                        """,
                                 sentEmote),
                         false)
                 .addField(
                         "⚠️ Avertissement :",
                         """
-                Ce ticket a été ouvert par la modération. Il est donc sûrement lié à un comportement problématique.
-                Veuillez en tenir compte dans les messages que vous adresserez tout au long de ce ticket.
-                """,
+                                Ce ticket a été ouvert par la modération. Il est donc sûrement lié à un comportement problématique.
+                                Veuillez en tenir compte dans les messages que vous adresserez tout au long de ce ticket.
+                                """,
                         false)
                 .setColor(Color.ORANGE);
     }
@@ -141,17 +166,17 @@ public class Embeds {
                         "ℹ️ Détails :",
                         String.format(
                                 """
-                    > **Identifiant de l'utilisateur**
-                    %s
+                                        > **Identifiant de l'utilisateur**
+                                        %s
 
-                    > **Nom de l'utilisateur**
-                    %s (`@%s`)
+                                        > **Nom de l'utilisateur**
+                                        %s (`@%s`)
 
-                    :hash: **Salon**
-                    %s (`#%s`)
+                                        :hash: **Salon**
+                                        %s (`#%s`)
 
-                    %s
-                    """,
+                                        %s
+                                        """,
                                 from.getId(),
                                 from.getAsMention(),
                                 from.getAsTag(),
@@ -160,16 +185,16 @@ public class Embeds {
                                 forced
                                         ? String.format(
                                                 """
-                         🛂 **Ouvert par**
-                         %s (`@%s`)
+                                                 🛂 **Ouvert par**
+                                                 %s (`@%s`)
 
-                        """,
+                                                """,
                                                 by.getAsMention(), by.getAsTag())
                                         : String.format(
                                                 """
-                        📝 **Raison**
-                        `%s`
-                    """,
+                                                    📝 **Raison**
+                                                    `%s`
+                                                """,
                                                 reason)),
                         false);
     }
@@ -184,15 +209,15 @@ public class Embeds {
                         "ℹ️ Détails :",
                         String.format(
                                 """
-                    > **Identifiant de l'utilisateur**
-                    %s
+                                        > **Identifiant de l'utilisateur**
+                                        %s
 
-                    > **Nom de l'utilisateur**
-                    %s (`@%s`)
+                                        > **Nom de l'utilisateur**
+                                        %s (`@%s`)
 
-                    :spiral_note_pad: **Rapport**
-                    [Lien du rapport](%s)
-                    """,
+                                        :spiral_note_pad: **Rapport**
+                                        [Lien du rapport](%s)
+                                        """,
                                 from.getId(), from.getAsMention(), from.getAsTag(), jumpUrl),
                         false);
     }
